<resources>
    <string name="app_name" translatable="false">Clock 31</string>
    <string name="app_widget_description">Simple clock and calendar combo widget</string>
    <string name="no_events">No upcoming events</string>
    <string name="tap_calendar">Enjoy your free time</string>
    <string name="header_today">Today</string>
    <string name="header_tomorrow">Tomorrow</string>
    <string name="all_day">All day</string>
    <string name="rel_now">Now</string>
    <string name="rel_in_min">in %1$d min</string>
    <string name="rel_in_hour">in %1$d h</string>
    <string name="settings_title">Widget settings</string>
    <string name="tone_label">Clock &amp; date color</string>
    <string name="tone_wallpaper">Wallpaper</string>
    <string name="tone_neutral">Neutral</string>
    <string name="tone_white">White</string>
    <string name="clock_only">Hide calendar (clock only)</string>
    <string name="show_weather">Show weather</string>
    <string name="unit_label">Temperature unit</string>
    <string name="unit_celsius">°C</string>
    <string name="unit_fahrenheit">°F</string>
    <string name="weather_app_label">App to open when you tap the weather</string>
    <string name="weather_app_none">Not set</string>
    <string name="weather_app_choose">Choose app</string>
    <string name="done">Add widget</string>
</resources>